@@ -1,3 +1,9 @@
+clant (1.1.0) unstable;
+
+  * Add --headers flag to enable checking individual headers
+
+ -- David Robillard <d@drobilla.net>  Thu, 14 Jul 2022 18:43:08 +0000
+
 clant (1.0.4) stable;
 
   * Exit with non-zero status when errors are found
